# ELE492-RobotArm

./: .gitignore  PrintAll.java
Arduino/CommBridgeTest/: CommBridgeTest.ino
Arduino/RobotArm/: RobotArm.cpp  RobotArm.h
Arduino/SerialTest/: SerialTest.ino
Arduino/sketch_jan31a/: sketch_jan31a.ino
LeapCxx-master/samples/Java Only/: CMakeLists.txt  Java Only - Shortcut.lnk
RobotArm_Arduino/ArmDriver/: ArmDriver.ino
RobotArm_Arduino/RobotArm/: RobotArm.cpp  RobotArm.h
RobotArm_Arduino/sketch_jan31a/: sketch_jan31a.ino
RobotArm_Java/: .classpath  .project  build.xml
RobotArm_Java/log/: ABFilterExample.xlsx  arm.csv  floatingTargetTestConstantSpeed.xlsx  leap.csv  rawWristVsElbow.csv
RobotArm_Java/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
RobotArm_Java/nbproject/private/: private.properties  private.xml
RobotArm_Java/src/: .classpath  Arduino.java  LatencyTest.java  PrintAll.java  SerialTest.java  UltraLeapTesting.java
hwdemo/: .classpath  .project  build.xml
hwdemo/log/: ABFilterExample.xlsx  arm.csv  floatingTargetTestConstantSpeed.xlsx  leap.csv  rawAndFilteresWristVsElbow.csv  ~$ABFilterExample.xlsx
hwdemo/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
hwdemo/src/: AlphaBetaFilter.java  Arduino.java  CRCPacket.java  CRCTesting.java  ConstantSpeedTest.java  FloatingTargetTest.java  LatencyTest.java  Main.java  MidSemesterDemo.java  Packet.java  PrintAll.java  SerialTest.java  UltraLeapTesting.java  UltraleapListener.java  VarSpeedTest.java
hwdemo/src/lib/: Arduino.java  (+8 more)
(+68 files in other folders)
